# funky-tags

./: .env  .env.example  .gitignore  Cargo.toml  build.rs  flake.nix
.sqlx/: query-199124fdcf513d9e9aa53439de527fb5cd85d46a4bee6149ac07756d53c27f26.json  query-1b4bc0f4161d2808c9b11f6b3bd0343c6e4d51bf581a3cc3bc72e34e7b370319.json  query-5cb4e2c6866ebf30d38e8522a535e7af1c9d06f25558eb3a998f24c3f43b0dfb.json  query-92adb3e54efbdc2d2bf0257286fff83021d3d7d09bf6196cbd9de7a3ef598123.json  query-cb63e2a81481333d03264ad0c546074bcfce202f740f95f0f34e0f2c9b6ad3c3.json  query-fb141582d1d10daebf307c0e73f194277be005cfcf1cc532e5eca959e38b8e30.json
migrations/: 20230827133023_init.sql
src/: assets.rs  auth.rs  error.rs  login.rs  main.rs  tags.rs  utils.rs
styles/: _button.scss  _card.scss  _input.scss  _modal.scss  _variables.scss  main.scss
templates/: gameSelect.html  index.html  loginForm.html  tags.html  tagsForm.html
