[package]
name = "funky-tags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# askama = { version = "0.12.0", features = ["with-rocket"] }
askama = "0.12.0"
axum = { version = "0.6.20", features = ["tracing", "macros"] }
# actix-web = "4"
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
mime_guess = "2.0.4"
rust-embed = "8.0.0"
serde = "1.0.188"
# rocket = "0.5.0-rc.3"
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "tracing", "rt-multi-thread"] }
tower-cookies = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
grass = { version = "0.13.1", features = ["macro"] }
